# cpp_cmake_template

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cpp
